Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -187,6 +187,8 @@ date.time: H:i:s
 "menuUser_2": "My page"
 "menuUser_3": "Logout"
 "menuUser_4": "Login"
+"menuUser_5": "Registration"
+"menuUser_6": "Reover password"
 
 # Table and pagination
 "tableAndPagination_1": "Refresh"
@@ -266,26 +268,29 @@ date.time: H:i:s
 "controlPanel_6": "Modules"
 "controlPanel_7": "Roles"
 "controlPanel_8": "Settings"
-"controlPanel_9": "Payments section."
-"controlPanel_10": "Pages section."
-"controlPanel_11": "Create"
-"controlPanel_12": "Modify"
-"controlPanel_13": "Users section."
-"controlPanel_14": "Modules section."
-"controlPanel_15": "Roles section."
-"controlPanel_16": "Settings section."
-"controlPanel_17": "Really delete this payment?"
-"controlPanel_18": "Really delete all payments?"
-"controlPanel_19": "Really delete this page?"
-"controlPanel_20": "Really delete all pages?"
-"controlPanel_21": "Really delete this user?"
-"controlPanel_22": "Really delete all users?"
-"controlPanel_23": "Really delete this module?"
-"controlPanel_24": "Really delete all modules?"
-"controlPanel_25": "Really delete this role?"
-"controlPanel_26": "Really delete all roles?"
-"controlPanel_27": "Really delete this language?"
-"controlPanel_28": "You don't have the permissions for access on this page!"
+"controlPanel_9": "Api"
+"controlPanel_10": "Create"
+"controlPanel_11": "Modify"
+"controlPanel_12": "You don't have the permissions for access on this page!"
+"controlPanel_payment_1": "Payments section."
+"controlPanel_payment_2": "Really delete this payment?"
+"controlPanel_payment_3": "Really delete all payments?"
+"controlPanel_page_1": "Pages section."
+"controlPanel_page_2": "Really delete this page?"
+"controlPanel_page_3": "Really delete all pages?"
+"controlPanel_user_1": "Users section."
+"controlPanel_user_2": "Really delete this user?"
+"controlPanel_user_3": "Really delete all users?"
+"controlPanel_module_1": "Modules section."
+"controlPanel_module_2": "Really delete this module?"
+"controlPanel_module_3": "Really delete all modules?"
+"controlPanel_role_1": "Roles section."
+"controlPanel_role_2": "Really delete this role?"
+"controlPanel_role_3": "Really delete all roles?"
+"controlPanel_setting_1": "Settings section."
+"controlPanel_setting_2": "Really delete this language?"
+"controlPanel_microservice_api_1": "Api section."
+"controlPanel_microservice_api_2": ""
 
 # Payment
 "paymentUserSelection_1": "Payments user selection form"
@@ -582,8 +587,12 @@ date.time: H:i:s
 "settingFormType_20": "Paypal business active"
 "settingFormType_21": "Paypal currency code"
 "settingFormType_22": "Paypal credit amount"
-"settingFormType_23": "Cret active"
-"settingFormType_24": "Send"
+"settingFormType_23": "Credit active"
+"settingFormType_24": "Use type"
+"settingFormType_25": "Website"
+"settingFormType_26": "Microservice"
+"settingFormType_27": "Ecommerce"
+"settingFormType_28": "Send"
 
 "settingController_1": "Roles maintenance"
 "settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
@@ -593,3 +602,26 @@ date.time: H:i:s
 "settingController_6": "Language update completed."
 "settingController_7": "Language creation completed."
 "settingController_8": "Language not created!"
+
+# Microservice api
+"microserviceApi_1": "Modify"
+"microserviceApi_2": "Active"
+"microserviceApi_3": "Not active"
+
+"microserviceApiCreation_1": "Api creation form"
+"microserviceApiCreation_2": "."
+
+"microserviceApiProfile_1": "Api profile form"
+"microserviceApiProfile_2": "."
+
+"microserviceApiFormType_1": "Name"
+"microserviceApiFormType_2": "Description"
+"microserviceApiFormType_3": "Active"
+"microserviceApiFormType_4": "No"
+"microserviceApiFormType_5": "Yes"
+"microserviceApiFormType_6": "Send"
+
+"microserviceApiController_1": "Api creation completed."
+"microserviceApiController_2": "Api not created!"
+"microserviceApiController_3": "Api update completed."
+"microserviceApiController_4": "Api update not completed!"
