Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -302,7 +302,7 @@ date.time: H:i:s
 "controlPanelMicroserviceDeploy_1": "Deploy section."
 "controlPanelMicroserviceDeploy_2": "Really delete this module?"
 "controlPanelMicroserviceDeploy_3": "Really delete all modules?"
-"controlPanelMicroserviceDeploy_4": "Are you sure to start a deploy?"
+"controlPanelMicroserviceDeploy_4": "Are you sure to execute the command?"
 
 "controlPanelMicroserviceApi_1": "Api section."
 
@@ -641,17 +641,21 @@ date.time: H:i:s
 
 "microserviceDeployFormType_1": "Name"
 "microserviceDeployFormType_2": "Description"
-"microserviceDeployFormType_3": "Git user email"
-"microserviceDeployFormType_4": "Git user name"
-"microserviceDeployFormType_5": "Git clone url"
-"microserviceDeployFormType_6": "Git clone path"
-"microserviceDeployFormType_7": "User git script"
-"microserviceDeployFormType_8": "User web script"
-"microserviceDeployFormType_9": "Root web path"
-"microserviceDeployFormType_10": "Active"
-"microserviceDeployFormType_11": "No"
-"microserviceDeployFormType_12": "Yes"
-"microserviceDeployFormType_13": "Send"
+"microserviceDeployFormType_3": "System user"
+"microserviceDeployFormType_4": "Key public"
+"microserviceDeployFormType_5": "Key private"
+"microserviceDeployFormType_6": "Ip"
+"microserviceDeployFormType_7": "Git user email"
+"microserviceDeployFormType_8": "Git user name"
+"microserviceDeployFormType_9": "Git clone url"
+"microserviceDeployFormType_10": "Git clone path"
+"microserviceDeployFormType_11": "User git script"
+"microserviceDeployFormType_12": "User web script"
+"microserviceDeployFormType_13": "Root web path"
+"microserviceDeployFormType_14": "Active"
+"microserviceDeployFormType_15": "No"
+"microserviceDeployFormType_16": "Yes"
+"microserviceDeployFormType_17": "Send"
 
 "microserviceDeploySelectFormType_1": "Name"
 "microserviceDeploySelectFormType_2": "Select"
@@ -662,12 +666,16 @@ date.time: H:i:s
 "microserviceDeployController_4": "Microservice deploy not selected!"
 "microserviceDeployController_5": "Microservice deploy update completed."
 "microserviceDeployController_6": "Microservice deploy update not completed!"
-"microserviceDeployController_7": "Microservice deploy delete completed."
-"microserviceDeployController_8": "All Microservice deploy delete completed."
-"microserviceDeployController_9": "Microservice deploy not deleted!"
-"microserviceDeployController_10": "Start deploy"
-"microserviceDeployController_11": "No"
-"microserviceDeployController_12": "Yes"
+"microserviceDeployController_7": "Command executed."
+"microserviceDeployController_8": "Command not executed!"
+"microserviceDeployController_9": "Microservice deploy delete completed."
+"microserviceDeployController_10": "All Microservice deploy delete completed."
+"microserviceDeployController_11": "Microservice deploy not deleted!"
+"microserviceDeployController_12": "Clone"
+"microserviceDeployController_13": "Pull"
+"microserviceDeployController_14": "Reset"
+"microserviceDeployController_15": "No"
+"microserviceDeployController_16": "Yes"
 
 # Microservice api
 "microserviceApi_1": "Profile"
