Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -652,10 +652,11 @@ date.time: H:i:s
 "microserviceDeployFormType_11": "User git script"
 "microserviceDeployFormType_12": "User web script"
 "microserviceDeployFormType_13": "Root web path"
-"microserviceDeployFormType_14": "Active"
-"microserviceDeployFormType_15": "No"
-"microserviceDeployFormType_16": "Yes"
-"microserviceDeployFormType_17": "Send"
+"microserviceDeployFormType_14": "Branch name"
+"microserviceDeployFormType_15": "Active"
+"microserviceDeployFormType_16": "No"
+"microserviceDeployFormType_17": "Yes"
+"microserviceDeployFormType_18": "Send"
 
 "microserviceDeploySelectFormType_1": "Name"
 "microserviceDeploySelectFormType_2": "Select"
