Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -669,14 +669,15 @@ date.time: H:i:s
 "microserviceDeployController_6": "Microservice deploy update not completed!"
 "microserviceDeployController_7": "Command executed."
 "microserviceDeployController_8": "Command not executed!"
-"microserviceDeployController_9": "Microservice deploy delete completed."
-"microserviceDeployController_10": "All Microservice deploy delete completed."
-"microserviceDeployController_11": "Microservice deploy not deleted!"
-"microserviceDeployController_12": "Clone"
-"microserviceDeployController_13": "Pull"
-"microserviceDeployController_14": "Reset"
-"microserviceDeployController_15": "No"
-"microserviceDeployController_16": "Yes"
+"microserviceDeployController_9": "Branch name required!"
+"microserviceDeployController_10": "Microservice deploy delete completed."
+"microserviceDeployController_11": "All Microservice deploy delete completed."
+"microserviceDeployController_12": "Microservice deploy not deleted!"
+"microserviceDeployController_13": "Clone"
+"microserviceDeployController_14": "Pull"
+"microserviceDeployController_15": "Reset"
+"microserviceDeployController_16": "No"
+"microserviceDeployController_17": "Yes"
 
 # Microservice api
 "microserviceApi_1": "Profile"
