--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -700,3 +700,40 @@ date.time: H:i:s
 "microserviceApiController_2": "Api not created!"
 "microserviceApiController_3": "Api update completed."
 "microserviceApiController_4": "Api update not completed!"
+
+# Api test
+"apiTest_1": "Really delete this apiTest?"
+
+"apiTestCreate_1": "ApiTest create form"
+"apiTestCreate_2": "."
+
+"apiTestSelect_1": "ApiTest select form"
+"apiTestSelect_2": "."
+
+"apiTestProfile_1": "ApiTest profile form"
+
+"apiTestDelete_1": "Warning! If you delete the apiTest is impossible return back."
+"apiTestDelete_2": "Delete"
+
+"apiTestFormType_1": "Name"
+"apiTestFormType_2": "Ip"
+"apiTestFormType_3": "Token"
+"apiTestFormType_4": "Active"
+"apiTestFormType_5": "No"
+"apiTestFormType_6": "Yes"
+"apiTestFormType_7": "Send"
+
+"apiTestSelectFormType_1": "Name"
+"apiTestSelectFormType_2": "Select"
+
+"apiTestController_1": "ApiTest created."
+"apiTestController_2": "ApiTest not created!"
+"apiTestController_3": "ApiTest not selected!"
+"apiTestController_4": "ApiTest updated."
+"apiTestController_5": "ApiTest not updated!"
+"apiTestController_6": "ApiTest deleted."
+"apiTestController_7": "ApiTest not deleted!"
+"apiTestController_8": "ApiTest is active."
+"apiTestController_9": "ApiTest is not active!"
+"apiTestController_10": "ApiTest problem with values!"
+"apiTestController_11": "ApiTest request completed."
