Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -701,39 +701,43 @@ date.time: H:i:s
 "microserviceApiController_3": "Api update completed."
 "microserviceApiController_4": "Api update not completed!"
 
-# Api test
-"apiTest_1": "Really delete this apiTest?"
+# ApiBasic
+"apiBasic_1": "Really delete this apiBasic?"
 
-"apiTestCreate_1": "ApiTest create form"
-"apiTestCreate_2": "."
+"apiBasicCreate_1": "ApiBasic create form"
+"apiBasicCreate_2": "."
 
-"apiTestSelect_1": "ApiTest select form"
-"apiTestSelect_2": "."
+"apiBasicSelect_1": "ApiBasic select form"
+"apiBasicSelect_2": "."
 
-"apiTestProfile_1": "ApiTest profile form"
+"apiBasicProfile_1": "ApiBasic profile form"
 
-"apiTestDelete_1": "Warning! If you delete the apiTest is impossible return back."
-"apiTestDelete_2": "Delete"
+"apiBasicDelete_1": "Warning! If you delete the apiBasic is impossible return back."
+"apiBasicDelete_2": "Delete"
 
-"apiTestFormType_1": "Name"
-"apiTestFormType_2": "Ip"
-"apiTestFormType_3": "Token"
-"apiTestFormType_4": "Active"
-"apiTestFormType_5": "No"
-"apiTestFormType_6": "Yes"
-"apiTestFormType_7": "Send"
+"apiBasicFormType_1": "Name"
+"apiBasicFormType_2": "Ip"
+"apiBasicFormType_3": "Token"
+"apiBasicFormType_4": "Url callback"
+"apiBasicFormType_5": "Active"
+"apiBasicFormType_6": "No"
+"apiBasicFormType_7": "Yes"
+"apiBasicFormType_8": "Send"
 
-"apiTestSelectFormType_1": "Name"
-"apiTestSelectFormType_2": "Select"
+"apiBasicSelectFormType_1": "Name"
+"apiBasicSelectFormType_2": "Select"
 
-"apiTestController_1": "ApiTest created."
-"apiTestController_2": "ApiTest not created!"
-"apiTestController_3": "ApiTest not selected!"
-"apiTestController_4": "ApiTest updated."
-"apiTestController_5": "ApiTest not updated!"
-"apiTestController_6": "ApiTest deleted."
-"apiTestController_7": "ApiTest not deleted!"
-"apiTestController_8": "ApiTest is active."
-"apiTestController_9": "ApiTest is not active!"
-"apiTestController_10": "ApiTest problem with values!"
-"apiTestController_11": "ApiTest request completed."
+"apiBasicController_1": "ApiBasic created."
+"apiBasicController_2": "ApiBasic not created!"
+"apiBasicController_3": "ApiBasic not selected!"
+"apiBasicController_4": "ApiBasic updated."
+"apiBasicController_5": "ApiBasic not updated!"
+"apiBasicController_6": "ApiBasic deleted."
+"apiBasicController_7": "ApiBasic not deleted!"
+"apiBasicController_8": "ApiBasic is active."
+"apiBasicController_9": "ApiBasic is not active!"
+"apiBasicController_11": "ApiBasic request completed."
+"apiBasicController_12": "ApiBasic problem with parameters!"
+"apiBasicController_13": "ApiBasic problem with token!"
+"apiBasicController_14": "ApiBasic problem with ip."
+"apiBasicController_15": "ApiBasic problem with url callback."
