Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yml
+++ b/symfony_fw/translations/messages.en.yml
@@ -596,16 +596,17 @@ date.time: H:i:s
 "settingFormType_15": "User registration confirmed from admin"
 "settingFormType_16": "Login attempt time (minus)"
 "settingFormType_17": "Login attempt count"
-"settingFormType_18": "captcha active"
-"settingFormType_19": "Paypal sandbox active"
-"settingFormType_20": "Paypal business active"
-"settingFormType_21": "Paypal currency code"
-"settingFormType_22": "Paypal credit amount"
-"settingFormType_23": "Credit active"
-"settingFormType_24": "Use type"
-"settingFormType_25": "Website"
-"settingFormType_26": "Ecommerce"
-"settingFormType_27": "Send"
+"settingFormType_18": "Captcha active"
+"settingFormType_19": "Use type"
+"settingFormType_20": "Website"
+"settingFormType_21": "Ecommerce"
+"settingFormType_22": "Payment active"
+"settingFormType_23": "Paypal sandbox active"
+"settingFormType_24": "Paypal business active"
+"settingFormType_25": "Paypal currency code"
+"settingFormType_26": "Paypal credit amount"
+"settingFormType_27": "Credit active"
+"settingFormType_28": "Send"
 
 "settingController_1": "Roles maintenance"
 "settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
