--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -153,7 +153,9 @@ date.time: H:i:s
 "pageViewController_2": "This page doesn't exist!"
 "pageViewController_3": "This page isn't available if you are logged!"
 "pageViewController_4": "This page isn't available for your role!"
-"pageViewController_5": "Need login for show content!"
+"pageViewController_5": "Registration is disable!"
+"pageViewController_6": "Recover password is disable!"
+"pageViewController_7": "Need login for show content!"
 
 # Page comment
 "pageComment_1": "Need to do login for use the comments!"
@@ -596,17 +598,19 @@ date.time: H:i:s
 "settingFormType_15": "User registration confirmed from admin"
 "settingFormType_16": "Login attempt time (minus)"
 "settingFormType_17": "Login attempt count"
-"settingFormType_18": "Captcha active"
-"settingFormType_19": "Use type"
-"settingFormType_20": "Website"
-"settingFormType_21": "Ecommerce"
-"settingFormType_22": "Payment active"
-"settingFormType_23": "Paypal sandbox active"
-"settingFormType_24": "Paypal business active"
-"settingFormType_25": "Paypal currency code"
-"settingFormType_26": "Paypal credit amount"
-"settingFormType_27": "Credit active"
-"settingFormType_28": "Send"
+"settingFormType_18": "Registration active"
+"settingFormType_19": "Recover password active"
+"settingFormType_20": "Captcha active"
+"settingFormType_21": "Use type"
+"settingFormType_22": "Website"
+"settingFormType_23": "Ecommerce"
+"settingFormType_24": "Payment active"
+"settingFormType_25": "Paypal sandbox active"
+"settingFormType_26": "Paypal business active"
+"settingFormType_27": "Paypal currency code"
+"settingFormType_28": "Paypal credit amount"
+"settingFormType_29": "Credit active"
+"settingFormType_30": "Send"
 
 "settingController_1": "Roles maintenance"
 "settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
