Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -263,20 +263,22 @@ date.time: H:i:s
 "classUtility_7": "This module"
 
 # Control panel
-"controlPanel_1": "Website home"
-"controlPanel_2": "Sytem info"
-"controlPanel_3": "Payments"
-"controlPanel_4": "Pages"
-"controlPanel_5": "Users"
-"controlPanel_6": "Modules"
-"controlPanel_7": "Roles"
-"controlPanel_8": "Settings"
-"controlPanel_9": "Microservice"
-"controlPanel_10": "Deploy"
-"controlPanel_11": "Api"
-"controlPanel_12": "Create"
-"controlPanel_13": "Modify"
-"controlPanel_14": "You don't have the permissions for access on this page!"
+"controlPanel_1": "Create"
+"controlPanel_2": "Modify"
+"controlPanel_3": "You don't have the permissions for access on this page!"
+"controlPanel_4": "Website home"
+"controlPanel_5": "Sytem info"
+"controlPanel_6": "Payments"
+"controlPanel_7": "Pages"
+"controlPanel_8": "Users"
+"controlPanel_9": "Modules"
+"controlPanel_10": "Roles"
+"controlPanel_11": "Settings"
+"controlPanel_12": "Slack"
+"controlPanel_13": "Line"
+"controlPanel_14": "Microservice"
+"controlPanel_15": "Deploy"
+"controlPanel_16": "Api"
 
 "controlPanelPayment_1": "Payments section."
 "controlPanelPayment_2": "Really delete this payment?"
@@ -300,6 +302,9 @@ date.time: H:i:s
 
 "controlPanelSetting_1": "Settings section."
 "controlPanelSetting_2": "Really delete this language?"
+
+"controlPanelSettingSlack_1": "Settings slack section."
+"controlPanelSettingSlack_2": "Really delete this incoming webhooks?"
 
 "controlPanelMicroserviceDeploy_1": "Deploy section."
 "controlPanelMicroserviceDeploy_2": "Really delete this module?"
@@ -573,25 +578,27 @@ date.time: H:i:s
 "setting_1": "Style"
 "setting_2": "."
 "setting_3": "Column type"
-"setting_4": "Lanuage management"
-"setting_5": "System"
-"setting_6": ".."
-"setting_7": "Payment"
-"setting_8": "..."
-"setting_9": "Credit"
-"setting_10": "...."
+"setting_4": "System"
+"setting_5": ".."
+"setting_6": "Lanuage management"
+"setting_7": "Code"
+"setting_8": "Date"
+"setting_9": "Payment"
+"setting_10": "..."
+"setting_11": "Paypal"
+"setting_12": "...."
 
 "settingFormType_1": "Template"
 "settingFormType_2": "Type 1"
 "settingFormType_3": "Type 2"
 "settingFormType_4": "Type 3"
 "settingFormType_5": "Type 4"
-"settingFormType_6": "Language"
-"settingFormType_7": "Show page date"
-"settingFormType_8": "No"
-"settingFormType_9": "Yes"
-"settingFormType_10": "Show page comment"
-"settingFormType_11": "Page comment active"
+"settingFormType_6": "Show page date"
+"settingFormType_7": "No"
+"settingFormType_8": "Yes"
+"settingFormType_9": "Show page comment"
+"settingFormType_10": "Page comment active"
+"settingFormType_11": "Language"
 "settingFormType_12": "Email admin"
 "settingFormType_13": "Website active"
 "settingFormType_14": "Https active"
@@ -605,21 +612,36 @@ date.time: H:i:s
 "settingFormType_22": "Website"
 "settingFormType_23": "Ecommerce"
 "settingFormType_24": "Payment active"
-"settingFormType_25": "Paypal sandbox active"
-"settingFormType_26": "Paypal business active"
-"settingFormType_27": "Paypal currency code"
-"settingFormType_28": "Paypal credit amount"
-"settingFormType_29": "Credit active"
+"settingFormType_25": "Credit active"
+"settingFormType_26": "Paypal sandbox active"
+"settingFormType_27": "Paypal business active"
+"settingFormType_28": "Paypal currency code"
+"settingFormType_29": "Paypal credit amount"
 "settingFormType_30": "Send"
 
 "settingController_1": "Roles maintenance"
 "settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
-"settingController_3": "Setting update complete."
+"settingController_3": "Setting update completed."
 "settingController_4": "Setting not saved!"
 "settingController_5": "Language deletion completed."
 "settingController_6": "Language update completed."
 "settingController_7": "Language create completed."
 "settingController_8": "Language not created!"
+
+# Setting slack
+"settingSlackIw_1": "Incoming webhook"
+"settingSlackIw_2": "....."
+
+"settingSlackIwFormType_1": "Name"
+"settingSlackIwFormType_2": "Hook"
+"settingSlackIwFormType_3": "Channel"
+"settingSlackIwFormType_4": "Send"
+
+"settingSlackIwController_1": "Incoming webhook create completed!"
+"settingSlackIwController_2": "Incoming webhook not created!"
+"settingSlackIwController_3": "Incoming webhook not selected!"
+"settingSlackIwController_4": "Incoming webhook delete completed."
+"settingSlackIwController_5": "Incoming webhook not deleted!"
 
 # Microservice deploy
 "microserviceDeployRender_1": "Microservice deploy render form"
@@ -725,10 +747,16 @@ date.time: H:i:s
 "apiBasicFormType_2": "Token"
 "apiBasicFormType_3": "Ip"
 "apiBasicFormType_4": "Url callback"
-"apiBasicFormType_5": "Active"
-"apiBasicFormType_6": "No"
-"apiBasicFormType_7": "Yes"
-"apiBasicFormType_8": "Send"
+"apiBasicFormType_5": "Database ip"
+"apiBasicFormType_6": "Database name"
+"apiBasicFormType_7": "Database username"
+"apiBasicFormType_8": "Database password"
+"apiBasicFormType_9": "Active"
+"apiBasicFormType_10": "No"
+"apiBasicFormType_11": "Yes"
+"apiBasicFormType_12": "Slack active"
+"apiBasicFormType_13": "Line active"
+"apiBasicFormType_14": "Send"
 
 "apiBasicSelectFormType_1": "Name"
 "apiBasicSelectFormType_2": "Select"
