Restyle - Work in progress.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -631,17 +631,20 @@ date.time: H:i:s
 # Setting slack
 "settingSlackIw_1": "Incoming webhook"
 "settingSlackIw_2": "....."
+"settingSlackIw_3": "Reset"
 
 "settingSlackIwFormType_1": "Name"
 "settingSlackIwFormType_2": "Hook"
 "settingSlackIwFormType_3": "Channel"
 "settingSlackIwFormType_4": "Send"
 
-"settingSlackIwController_1": "Incoming webhook create completed!"
+"settingSlackIwController_1": "Incoming webhook create completed."
 "settingSlackIwController_2": "Incoming webhook not created!"
 "settingSlackIwController_3": "Incoming webhook not selected!"
 "settingSlackIwController_4": "Incoming webhook delete completed."
 "settingSlackIwController_5": "Incoming webhook not deleted!"
+"settingSlackIwController_6": "Incoming webhook reset completed."
+"settingSlackIwController_7": "Incoming webhook not resetted!"
 
 # Microservice deploy
 "microserviceDeployRender_1": "Microservice deploy render form"
@@ -668,21 +671,26 @@ date.time: H:i:s
 "microserviceDeployFormType_1": "Name"
 "microserviceDeployFormType_2": "Description"
 "microserviceDeployFormType_3": "System user"
-"microserviceDeployFormType_4": "Key public"
-"microserviceDeployFormType_5": "Key private"
-"microserviceDeployFormType_6": "Ip"
-"microserviceDeployFormType_7": "Git user email"
-"microserviceDeployFormType_8": "Git user name"
-"microserviceDeployFormType_9": "Git clone url"
-"microserviceDeployFormType_10": "Git clone path"
-"microserviceDeployFormType_11": "User git script"
-"microserviceDeployFormType_12": "User web script"
-"microserviceDeployFormType_13": "Root web path"
-"microserviceDeployFormType_14": "Branch name"
-"microserviceDeployFormType_15": "Active"
-"microserviceDeployFormType_16": "No"
-"microserviceDeployFormType_17": "Yes"
-"microserviceDeployFormType_18": "Send"
+"microserviceDeployFormType_4": "Ssh username"
+"microserviceDeployFormType_5": "Ssh password"
+"microserviceDeployFormType_6": "Key public"
+"microserviceDeployFormType_7": "Remove key public"
+"microserviceDeployFormType_8": "Key private"
+"microserviceDeployFormType_9": "Remove key private"
+"microserviceDeployFormType_10": "Ip"
+"microserviceDeployFormType_11": "Git user email"
+"microserviceDeployFormType_12": "Git user name"
+"microserviceDeployFormType_13": "Git clone url"
+"microserviceDeployFormType_14": "Git clone path"
+"microserviceDeployFormType_15": "User git script"
+"microserviceDeployFormType_16": "User web script"
+"microserviceDeployFormType_17": "Root web path"
+"microserviceDeployFormType_18": "Active"
+"microserviceDeployFormType_19": "No"
+"microserviceDeployFormType_20": "Yes"
+"microserviceDeployFormType_21": "Send"
+"microserviceDeployFormType_22": "Branch name"
+"microserviceDeployFormType_23": "Remove"
 
 "microserviceDeploySelectFormType_1": "Name"
 "microserviceDeploySelectFormType_2": "Select"
@@ -710,19 +718,23 @@ date.time: H:i:s
 "microserviceApi_2": "Active"
 "microserviceApi_3": "Not active"
 
-"microserviceApiCreate_1": "Api create form"
-"microserviceApiCreate_2": "."
+"microserviceApiCreate_1": "Back"
+"microserviceApiCreate_2": "Api create form"
+"microserviceApiCreate_3": "."
 
-"microserviceApiProfile_1": "Api profile form"
-"microserviceApiProfile_2": "."
+"microserviceApiProfile_1": "Back"
+"microserviceApiProfile_2": "Api profile form"
+"microserviceApiProfile_3": "."
 
 "microserviceApiFormType_1": "Name"
 "microserviceApiFormType_2": "Controller"
 "microserviceApiFormType_3": "Description"
-"microserviceApiFormType_4": "Active"
-"microserviceApiFormType_5": "No"
-"microserviceApiFormType_6": "Yes"
-"microserviceApiFormType_7": "Send"
+"microserviceApiFormType_4": "Image"
+"microserviceApiFormType_5": "Remove image"
+"microserviceApiFormType_6": "Active"
+"microserviceApiFormType_7": "No"
+"microserviceApiFormType_8": "Yes"
+"microserviceApiFormType_9": "Send"
 
 "microserviceApiController_1": "Api create completed."
 "microserviceApiController_2": "Api not created!"
